  
  o linearHypothesis() no longer issues a warning when a hypothesis matrix is supplied for coefficients whose names include arithmetic operators (following report by Robert Baer about unnecessary warnings printed by Anova(), which calls linearHypothesis()).
  
  o deltaMethod() now allows models with aliased coefficients when argument singular.ok=TRUE.
  
  o Small changes to docs.

Changes to Version 3.1-2
 
  o Fixed bugs in interface for residualPlots() and residualPlot()
  
  o Fixed hccm() to return a correct error message when regressors are ill-conditioned.
  
  o Use t-distribution for score tests in boxTidwell() and add omnibus score test (suggestions of Peter Dalgaard).
  
  o residualPlots() is no longer confused by a one-column matrix regressor, produced, e.g., by scale() (issue reported by Tom Wenseleers).
  
  o Make the printed formating of hypotheses in linearHypothesis() more tolerant of coefficients with certain non-standard names (after issue reported by Matthieu Stigler).
  
  o Tweak linearHypothesis() for multinom models and add example.
  
  o Update scatter3d() and crPlot3d() to use rgl::*3d() functions; requires rgl (>= 0.111.3) (patch courtesy of Duncan Murdoch).

Changes to Version 3.1-1

  o Fixed bug in hccm(): when some cases are fit exactly all versions of the hccm estimate are singular and inconsistent.  A error message is now returned.
  
  o Fixed bug in Anova.survreg() for Wald tests (reported by Megan Taylor Jones), which failed with a spurious "missing residual df" error.
  
  o Made Anova.lm() more robust when there are aliased coefficients (following report of cryptic output by Taiwo Fagbohungbe).
  
  o Added reg.function, reg.function.col, and mouseMode arguments to scatter3d(), and mouseMode to crPlot3d().

  o Added fill and associated arguments to influencePlot() (initial implementation of Michael Friendly).
  