@@ -8,6 +8,8 @@ Changes to Version 3.1-3
   
   o deltaMethod() now allows models with aliased coefficients when argument singular.ok=TRUE.
   
+  o Anova() method for "coxph" objects no longer computes incorrect LR tests for models using the tt argument; in this case, Wald tests are substituted (following bug report by Ken Beath).
+  
   o Small changes to docs.
 
 Changes to Version 3.1-2
